--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
-body{
-    background-color: #0D0714;
+html, body{
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background:#0D0714;
 }
